--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "classList.js": "https://github.com/eligrey/classList.js.git",
     "es5-shim": "https://github.com/es-shims/es5-shim.git",
     "promise-polyfill": "~2.1.0",
-    "velocity": "~1.2.3"
+    "pikaday": "~1.3.3",
+    "moment": "~2.10.6"
   }
 }
