--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "es5-shim": "https://github.com/es-shims/es5-shim.git",
     "promise-polyfill": "~2.1.0",
     "pikaday": "~1.3.3",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "velocity": "~1.2.3"
   }
 }
